<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="409dp"
        android:layout_height="56dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="83dp"
        android:background="@android:color/holo_red_dark"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toTopOf="@+id/result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:subtitle="@string/Title"
        app:subtitleTextAppearance="@style/TextAppearance.AppCompat.Large"
        app:subtitleTextColor="#0E0E0E" />

    <TextView
        android:id="@+id/result"
        android:layout_width="147dp"
        android:layout_height="24dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="102dp"
        android:layout_marginEnd="132dp"
        android:layout_marginBottom="4dp"
        android:text="@string/grade_display"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/finalgrade"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2" />

    <EditText
        android:id="@+id/finalgrade"
        android:layout_width="210dp"
        android:layout_height="45dp"
        android:layout_marginStart="99dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="103dp"
        android:layout_marginBottom="73dp"
        android:ems="10"
        android:hint="@string/final_grade_hint"
        android:inputType="none"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="173dp"
        android:layout_height="142dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="119dp"
        android:layout_marginBottom="200dp"
        android:contentDescription="@string/done_string"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/finalgrade"
        app:srcCompat="@drawable/done" />

    <Button
        android:id="@+id/home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="146dp"
        android:layout_marginTop="63dp"
        android:layout_marginEnd="146dp"
        android:layout_marginBottom="79dp"
        android:text="@string/home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

</androidx.constraintlayout.widget.ConstraintLayout>